--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,12 @@
     <version>1.11.946</version>
 </dependency>
 
+<dependency>
+    <groupId>software.amazon.awssdk</groupId>
+    <artifactId>auth</artifactId>
+    <version>2.15.72</version>
+</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
